fix boutons invisibles

--- a/views/styles/frontoffice/_styleAcceuilConnecte.scss
+++ b/views/styles/frontoffice/_styleAcceuilConnecte.scss
@@ -213,13 +213,5 @@
         height: 32px;
     }
     
-    button {
-        background: none;
-        border: none;
-        padding: 0;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
 }
